--- a/portadas/latex_paginatitulo_modTFE.tex
+++ b/portadas/latex_paginatitulo_modTFE.tex
@@ -49,7 +49,7 @@ en los resultados electorales
 Angel González Rizo} \\[0.5cm]
 
 {\large
-Sevilla, Enero de 2020
+Sevilla, Junio de 2021
 }
 
 \end{minipage}
