--- a/capitulo01.Rmd
+++ b/capitulo01.Rmd
@@ -78,7 +78,7 @@ knitr::opts_chunk$set(
 
 ## Objetivos
 
-  El objetivo del presente trabajo será una pequeña introducción explicando el funcionamiento del sistema electoral español, analizar distintos sistemas de votación que existen en la actualidad, analizar su comportamiento en diferentes escenarios y aplicar estos sistemas a España, analizando sus ventajas e inconvenientes.
+  El objetivo del presente trabajo será una pequeña introducción explicando el funcionamiento del sistema electoral español, analizar y comparar distintos sistemas de votación que existen en la actualidad, analizar su comportamiento en diferentes escenarios y aplicar estos sistemas a España, analizando sus ventajas e inconvenientes.
 
 ## ¿Qué significa votar?
 
@@ -88,9 +88,7 @@ Según la Real Academia de la Lengua Española votar proviene de la palabra lati
 
 ### Significado
 
-En su primera acepción en el diccionario de la Real Academia de la Lengua Española define votar como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas." 
-
--Rev-es la misma def--Para terminar de definir mejor el término buscamos la definición en el diccionario del español jurídico, en el cual en la primera acepción nos resulta útil para la delimitación del término que queremos definir, en su primera acepción lo define como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas." 
+En su primera acepción, en el diccionario de la Real Academia de la Lengua Española y en el diccionario del español jurídico define votar como: "Dicho de una persona: Dar su voto o decir su dictamen en una reunión o cuerpo deliberante, o en una elección de personas."
 
 ### ¿Votación o sufragio?
 
@@ -102,7 +100,7 @@ A lo largo del trabajo trataremos indistintamente ambos términos.
 
 ### Orígenes 
 
-El origen de el sistema electoral español se remonta a principios del siglo XIX, en una España invadida por el ejército de Napoleón. El vacío de poder facilitó la convocatoria de una asamblea nacional, las cortes, en la ciudad de Cádiz con diputados venidos de todas las regiones tanto de la península como de ultramar. La asamblea concluyó con la promulgación de la constitución de 1812.
+El origen del sistema electoral español se remonta a principios del siglo XIX, en una España invadida por el ejército de Napoleón. El vacío de poder facilitó la convocatoria de una asamblea nacional, las cortes, en la ciudad de Cádiz con diputados venidos de todas las regiones tanto de la península como de ultramar. La asamblea concluyó con la promulgación de la constitución de 1812.
 
 En la instrucción de 1810 comienzan a aparecer los mecanismos para elegir a los representantes tanto parroquiales, de partido y de provincia. La fórmula electoral escogida fue la mayoritaria. El sufragio es masculino universal e indirecto, aunque se requería que los electores ejerciesen algún tipo de industria.
 Ya en la constitución de 1812 se reguló todo el proceso electoral en los artículos 27 a 103, se determinó una distribución de 1 diputado por cada 70.000 personas.
@@ -134,7 +132,7 @@ En el artículo 161.2 se nos añade otra excepción para la elección de Senador
       
       
       
-    2. $\textrm{Diputados} = \text{Entero} \left\{\frac{\text{Población de derecho provincial}}{\text{Cuota de Reparto}}\right\}$
+    2. $\textrm{Diputados} = \text{Parte Entera} \left\{\frac{\text{Población de derecho provincial}}{\text{Cuota de Reparto}}\right\}$
       
       
     3. Diputados Restantes = 348 - Número Diputados paso 2  
